maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:44: error: ':' expected but ',' found.
def processNeighbor(x, y, xn, yn, minNeighborX, minNeighBorY, min) : (Int, Int, Int) {
                     ^ShortestPathMaze:74: error: identifier expected but '}' found.
}
^